fix(common-components): Changed icon alignment to middle

--- a/static/css/common-components.css
+++ b/static/css/common-components.css
@@ -113,6 +113,7 @@ a.icon-only {
     background: transparent;
     border: none;
     cursor: pointer;
+    vertical-align: middle;
 }
 
 button.icon-only .button-icon,
